--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,51 +1,54 @@
-name: docker
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - 'master-backup'
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:
+    branches: [ "main" ]
+
+env:
+  REGISTRY: ghcr.io
 
 jobs:
-  docker:
+  build:
+    permissions:
+      contents: read
+      packages: write
+
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64/v8
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-#      -
-#        name: Set up QEMU
-#        uses: docker/setup-qemu-action@v1
-#      -
-#        name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
-      - name: Install
-        run: yarn install
-      - name: Build
-        run: yarn run vue-cli-service build
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          # list of Docker images to use as base name for tags
-          images: |
-            yaoling/wallet
-          # generate Docker tags based on the following events/attributes
-          tags: |
-            type=sha
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+    - uses: actions/checkout@v3
+    - name: Save BUILD_TAG
+      run: |
+        TIMESTAMP=`date +%Y%m%d%H%M%S`
+        SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-6)
+        SNAPSHOT_TAG="${TIMESTAMP}-${SHORT_SHA}"
+        ARCH=$(echo '${{ matrix.platform }}' | tr / _)
+        echo "BUILD_TAG=$SNAPSHOT_TAG-$ARCH" >> $GITHUB_ENV
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Login to Docker Registry
+      uses: docker/login-action@v2
+      with:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        registry: ${{ env.REGISTRY }}
+    - name: Build and Push setup
+      uses: docker/build-push-action@v3
+      with:
+        file: Dockerfile.build
+        context: .
+        platforms: ${{ matrix.platform }}
+        tags: '${{ env.REGISTRY }}/arirubinstein/explorer:${{ env.BUILD_TAG }}'
+        push: true
+        build-args: |
+          TAG=${{ env.BUILD_TAG }}
